tests/paczka1/small_fuzzy/90048935.err
Error in line 4: bzkgd A708 13,5
Error in line 10: bzkgd S165 75,0
